# Mileage-Tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/ship-feature/: SKILL.md
scripts/: verify.sh
src/mileage_tracker/: config.py  dates.py  locations.py  server.py  sheet.py
tests/: mcp_smoke.py  preflight_env.py  regression_tools.py  smoke_edit_delete_trip.py
