[project]
name = "mileage-tracker"
version = "0.1.0"
description = "MCP server for logging business mileage to a Google Sheet, with cached per-location distances"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "gspread>=6.0",
    "google-auth>=2.28",
    "pydantic>=2.6",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
